--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
     "lint:install": "npm i --also=dev && npm run lint",
-    "start": "sirv docs --no-clear",
+    "start": "sirv public --no-clear",
     "test:build": "npm run build:install",
     "test:lint": "npm run lint:install"
   },
