--- a/package.json
+++ b/package.json
@@ -4,14 +4,10 @@
   "description": "My portfolio website.",
   "scripts": {
     "build": "rollup -c",
-    "build:install": "npm i --also=dev && npm run build",
     "dev": "rollup -c -w",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
-    "lint:install": "npm i --also=dev && npm run lint",
-    "start": "sirv public --no-clear",
-    "test:build": "npm run build:install",
-    "test:lint": "npm run lint:install"
+    "start": "sirv public --no-clear"
   },
   "keywords": [
     "BR88C",
@@ -30,23 +26,23 @@
     "url": "git+https://github.com/BR88C/br88c.dev.git"
   },
   "devDependencies": {
-    "@br88c/eslint-config": "^1.4.0",
-    "@rollup/plugin-commonjs": "^22.0.0",
-    "@rollup/plugin-node-resolve": "^13.2.1",
-    "@rollup/plugin-typescript": "^8.3.2",
+    "@br88c/eslint-config": "^1.5.1",
+    "@rollup/plugin-commonjs": "^22.0.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.3",
     "@tsconfig/svelte": "^3.0.0",
-    "eslint": "^8.14.0",
-    "rollup": "^2.70.2",
+    "eslint": "^8.19.0",
+    "rollup": "^2.76.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "saos": "^1.2.0",
+    "saos": "^1.3.1",
     "sirv-cli": "^2.0.2",
-    "svelte": "^3.47.0",
-    "svelte-preprocess": "^4.10.6",
+    "svelte": "^3.49.0",
+    "svelte-preprocess": "^4.10.7",
     "tslib": "^2.4.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.7.4"
   },
   "engines": {
     "node": ">=16.13.0",
